<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Déclaration des strings globaux -->
    <string name="app_name">SmartHouse</string>
    <string name="menu_settings">Paramètres</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="cancel">Annuler</string>
    
    <!-- Déclaration des strings pour l'activitée identification -->
    <string name="connexion">Connexion à </string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="identiant">Identifiant</string>
    <string name="cb_memorizeId">Mémoriser l\'identifiant</string>

    <!-- Déclaration des strings pour l'activitée Equipement -->
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="equipmentName">"L'équipement : "</string>
    <string name="equipmentState"></string>
    <string name="eqAct_bt_text_send">Faire l\'action</string>
    <string name="eq_tv_params_msg">"<u>Liste des paramètres</u> : "</string>
    <string name="eq_tv_methods_msg">"<u>Liste des méthodes</u> : "</string>

</resources>