<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EquipmentActivity" >

    <TextView
        android:id="@+id/txt_equipmentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipmentName" />

    <TextView
        android:id="@+id/tv_methods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eq_tv_methods_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spi_methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/tv_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/eq_tv_params_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/ll_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp"
        />
 
    <Button
        android:id="@+id/bt_sendAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/eqAct_bt_text_send" />

</LinearLayout>